# try-opencode-with-gpt

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/src/: lib.rs
core/tests/: simulation.rs
openspec/changes/add-idle-colony-mvp/: design.md  tasks.md
openspec/changes/add-idle-colony-mvp/specs/pixi-vue-ux/: spec.md
openspec/changes/add-idle-colony-mvp/specs/player-directed-construction/: spec.md
openspec/changes/add-idle-colony-mvp/specs/unit-needs-simulation/: spec.md
openspec/changes/add-idle-colony-mvp/specs/wasm-worker-core/: spec.md
openspec/changes/archive/2026-06-27-add-idle-colony-mvp/: proposal.md
openspec/changes/archive/2026-06-27-add-idle-colony-mvp/specs/tile-map-simulation/: spec.md
openspec/specs/pixi-vue-ux/: spec.md
openspec/specs/player-directed-construction/: spec.md
openspec/specs/tile-map-simulation/: spec.md
openspec/specs/unit-needs-simulation/: spec.md
openspec/specs/wasm-worker-core/: spec.md
src/: App.vue  style.css
src/game/: pixiMap.ts  viewModel.ts
src/wasm/idle_core/: idle_core.d.ts  idle_core.js  idle_core_bg.wasm  idle_core_bg.wasm.d.ts  package.json
src/worker/: bridge.ts  protocol.ts  simulation.worker.ts
tests/: viewModel.test.ts  workerBridge.test.ts
