[package]
name = "idle_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_ecs = "0.14"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json = "1"
